// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimePicker RNDateTimePickerIOS style props applies styling to DatePicker 1`] = `
<RNDateTimePicker
  date={1376949600000}
  displayIOS="default"
  enabled={true}
  mode="date"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "height": 216,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;

exports[`DateTimePicker given a component for android / iOS renders a component (iOS) / null (android) 1`] = `
<RNDateTimePicker
  date={1376949600000}
  displayIOS="default"
  enabled={true}
  mode="date"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 216,
    }
  }
/>
`;

exports[`DateTimePicker given a component for android / iOS renders a component (iOS) / null (android) 2`] = `null`;

exports[`DateTimePicker namedExports have the expected shape 1`] = `
Object {
  "DateTimePickerAndroid": Object {
    "dismiss": [Function],
    "open": [Function],
  },
  "createDateSetEvtParams": [Function],
  "createDismissEvtParams": [Function],
  "createNeutralEvtParams": [Function],
  "default": [Function],
}
`;
